[package]
name = "backr"
version = "0.2.0"
authors = ["martinak1 <martinak @ mymail.vcu .edu>"]
description = "A program that backs up user data that matches a regular expression"
repository = "https://github.com/martinak1/backr"
readme = "README.md"
keywords = ["backup-utility", "regex", "clap"]
categories = ["command-line-utility", "filesystem"]
license = "BSD-3-Clause"
travis-ci = "martinak1/backr"


[dependencies]
clap = "2.31.2"
regex = "1.0.0"
